--- a/src/web/Easy.Tall.UserCenter.WebApi/appsettings.json
+++ b/src/web/Easy.Tall.UserCenter.WebApi/appsettings.json
@@ -10,5 +10,11 @@
     "ApiDocUpdatePath": "/u",
     "ApiName": "Easy.Tall.UserCenter.WebApi",
     "Version": "1.0.0.1"
+  },
+  "ConnectionStrings": {
+    "test": {
+      "ProviderName": "Mysql.Data.MySqlClient",
+      "ConnectionString": "server=localhost;user id=root;password=123123;persistSecurityInfo=True;database=userCenter;charset=utf8;AllowUserVariables=True"
+    }
   }
 }
