--- a/src/web/Easy.Tall.UserCenter.WebApi/appsettings.json
+++ b/src/web/Easy.Tall.UserCenter.WebApi/appsettings.json
@@ -16,5 +16,12 @@
       "ProviderName": "Mysql.Data.MySqlClient",
       "ConnectionString": "server=localhost;user id=root;password=123123;persistSecurityInfo=True;database=userCenter;charset=utf8;AllowUserVariables=True"
     }
+  },
+  "Sso": {
+    "Secret": "7786df7fc3a34e26a61c034d5ec8245d",
+    "Audience": "Easy.Tall.UserCenter",
+    "Issuer": "Easy.Tall.UserCenter",
+    "Expire": 30,
+    "ClockSkew": 300000
   }
 }
