--- a/src/services/Easy.Tall.UserCenter.Services/Easy.Tall.UserCenter.Services.csproj
+++ b/src/services/Easy.Tall.UserCenter.Services/Easy.Tall.UserCenter.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="2.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\framework\Easy.Tall.UserCenter.Framework.Db\Easy.Tall.UserCenter.Framework.Db.csproj" />
     <ProjectReference Include="..\..\repository\Easy.Tall.UserCenter.Repository\Easy.Tall.UserCenter.Repository.csproj" />
     <ProjectReference Include="..\Easy.Tall.UserCenter.IServices\Easy.Tall.UserCenter.IServices.csproj" />
