--- a/src/repository/Easy.Tall.UserCenter.IRepository/Easy.Tall.UserCenter.IRepository.csproj
+++ b/src/repository/Easy.Tall.UserCenter.IRepository/Easy.Tall.UserCenter.IRepository.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Easy.Tall.UserCenter.Entity\Easy.Tall.UserCenter.Entity.csproj" />
     <ProjectReference Include="..\..\framework\Easy.Tall.UserCenter.Framework.Db\Easy.Tall.UserCenter.Framework.Db.csproj" />
+    <ProjectReference Include="..\..\model\Easy.Tall.UserCenter.Entity\Easy.Tall.UserCenter.Entity.csproj" />
   </ItemGroup>
 
 </Project>
