--- a/src/services/Easy.Tall.UserCenter.IServices/Easy.Tall.UserCenter.IServices.csproj
+++ b/src/services/Easy.Tall.UserCenter.IServices/Easy.Tall.UserCenter.IServices.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Easy.Tall.UserCenter.Entity\Easy.Tall.UserCenter.Entity.csproj" />
+    <ProjectReference Include="..\..\model\Easy.Tall.UserCenter.Entity\Easy.Tall.UserCenter.Entity.csproj" />
   </ItemGroup>
 
 </Project>
