--- a/src/model/Easy.Tall.UserCenter.Entity/Easy.Tall.UserCenter.Entity.csproj
+++ b/src/model/Easy.Tall.UserCenter.Entity/Easy.Tall.UserCenter.Entity.csproj
@@ -10,12 +10,12 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
   </PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\framework\Easy.Tall.UserCenter.Framework\Easy.Tall.UserCenter.Framework.csproj" />
-  </ItemGroup>
-
   <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
     <Exec Command="del $(ProjectDir)$(OutDir)..\*.nupkg /s/q&#xD;&#xA;exit 0" />
   </Target>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\framework\Easy.Tall.UserCenter.Framework\Easy.Tall.UserCenter.Framework.csproj" />
+  </ItemGroup>
 
 </Project>
