--- a/src/web/Easy.Tall.UserCenter.WebApi/appsettings.json
+++ b/src/web/Easy.Tall.UserCenter.WebApi/appsettings.json
@@ -12,9 +12,9 @@
     "Version": "1.0.0.1"
   },
   "ConnectionStrings": {
-    "test": {
+    "UserCenter": {
       "ProviderName": "Mysql.Data.MySqlClient",
-      "ConnectionString": "server=localhost;user id=root;password=123123;persistSecurityInfo=True;database=userCenter;charset=utf8;AllowUserVariables=True"
+      "ConnectionString": "server=localhost;user id=root;password=123456;persistSecurityInfo=True;database=userCenter;charset=utf8;AllowUserVariables=True"
     }
   },
   "Sso": {
