--- a/src/repository/Easy.Tall.UserCenter.Repository/Easy.Tall.UserCenter.Repository.csproj
+++ b/src/repository/Easy.Tall.UserCenter.Repository/Easy.Tall.UserCenter.Repository.csproj
@@ -5,7 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\source\Dapper\Dapper\Dapper.csproj" />
+    <PackageReference Include="Dapper" Version="1.60.6" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Easy.Tall.UserCenter.IRepository\Easy.Tall.UserCenter.IRepository.csproj" />
   </ItemGroup>
 
