--- a/src/web/Easy.Tall.UserCenter.WebApi/appsettings.json
+++ b/src/web/Easy.Tall.UserCenter.WebApi/appsettings.json
@@ -14,7 +14,7 @@
   "ConnectionStrings": {
     "UserCenter": {
       "ProviderName": "Mysql.Data.MySqlClient",
-      "ConnectionString": "server=localhost;user id=root;password=123456;persistSecurityInfo=True;database=userCenter;charset=utf8;AllowUserVariables=True"
+      "ConnectionString": "server=localhost;user id=root;password=123456;persistSecurityInfo=True;database=userCenter;charset=utf8mb4;AllowUserVariables=True"
     }
   },
   "Sso": {
