--- a/src/framework/Easy.Tall.UserCenter.Framework.Db/Easy.Tall.UserCenter.Framework.Db.csproj
+++ b/src/framework/Easy.Tall.UserCenter.Framework.Db/Easy.Tall.UserCenter.Framework.Db.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
@@ -7,7 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="2.2.0" />
-    <PackageReference Include="MySql.Data" Version="8.0.15" />
+    <PackageReference Include="MySql.Data" Version="8.0.17" />
   </ItemGroup>
 
 </Project>
