--- a/src/framework/Easy.Tall.UserCenter.NetCore/Easy.Tall.UserCenter.NetCore.csproj
+++ b/src/framework/Easy.Tall.UserCenter.NetCore/Easy.Tall.UserCenter.NetCore.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="12.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.App" Version="2.2.0" />
   </ItemGroup>
 
 </Project>
